src/test/resources/invalid/badIntCast.sbsc
// parser should error at invalid cast

println(int(2));